[package]
name = "yeepay-rs"
version = "0.1.2"
edition = "2024"
description = "Yeepay OpenAPI Core SDK for Rust"
license = "MIT"
authors = ["yinxu46 <yinxu46@qq.com>"]
repository = "https://github.com/yinxu46/yeepay-rs"
documentation = "https://docs.rs/yeepay-rs"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = "1"
yeepay-core = { version = "0", path = "../yeepay-core" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0"
calamine = "0"
csv = "1"
uuid = { version = "1", features = ['v4'] }